--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="txt_gorjeta">Gorjeta:</string>
     <string name="txt_total">Total:</string>
     <string name="txt_desenho">Desenho</string>
+    <string name="txt_re">RE:</string>
+    <string name="txt_nome">Nome:</string>
+    <string name="txt_salario">Salário:</string>
+    <string name="txt_dataadmissao">Data de Admissão</string>
+    <string name="txt_cargo">Cargo:</string>
+    <string name="txt_cadastrar">Cadastrar</string>
+    <string name="txt_listar">Listar</string>
 </resources>
